--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -1,4 +1,4 @@
-name: 欧加真 Android 15 通用OKI内核
+name: 欧加真 Android 15 通用OKI内核-改
 
 env:
   TZ: Asia/Shanghai
@@ -6,7 +6,7 @@ env:
   FEIL: 'oppo+oplus+realme'
   ANDROID_VERSION: 'android14'
   KERNEL_VERSION: '6.1'
-  KERNEL_NAME: 'android14-11-o-gca13bffobf09'
+  KERNEL_NAME: 'android14-11-o-g4c9c8979e2a7'
   KERNELSU_VARIANT: 'SukiSU-Ultra'
   KERNELSU_BRANCH: 'susfs-dev'
 
@@ -109,6 +109,10 @@ jobs:
           cd kernel_workspace/common
           cp ../SukiSU_patch/69_hide_stuff.patch ./
           patch -p1 < 69_hide_stuff.patch
+
+          # Add Pathc for lz4
+          patch -p1 < ../../.repo/manifests/patches/001-lz4.patch
+          patch -p1 < ../../.repo/manifests/patches/002-zstd.patch
 
       - name: 应用 lz4k 补丁
         run: |
