--- a/.github/workflows/deepseek_yaml_20250527_50d36f.yaml
+++ b/.github/workflows/deepseek_yaml_20250527_50d36f.yaml
@@ -9,10 +9,10 @@ jobs:
       - name: 初始化源码仓库
         run: |
           rm -rf kernel_workspace && mkdir kernel_workspace && cd kernel_workspace
-          mkdir kernel_workspace/common
-          cd kernel_workspace/common
+          # mkdir kernel_workspace/common
+          # cd kernel_workspace/common
           pwd
-          cd ../../.local/patches/
+          cd ../.local/patches/
           ls
       
       - name: Get directory structure
