--- a/.github/workflows/deepseek_yaml_20250527_50d36f.yaml
+++ b/.github/workflows/deepseek_yaml_20250527_50d36f.yaml
@@ -10,8 +10,11 @@ jobs:
         run: |
           rm -rf kernel_workspace && mkdir kernel_workspace && cd kernel_workspace
           mkdir common
-          cd kernel_workspace/common
           pwd
           ls
+          cd ..
+          pwd
+          ls
+          
 
       
