--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -118,6 +118,7 @@ jobs:
           sparse-checkout-cone-mode: true
           
       - name: 应用 lz4 patch  
+        run: |
           cd kernel_workspace/patches
           patch -p1 < ./001-lz4.patch
           patch -p1 < ./002-zstd.patch
