--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -70,7 +70,7 @@ jobs:
           rm -rf kernel_workspace && mkdir kernel_workspace && cd kernel_workspace
           echo "正在克隆源码仓库..."
           # git clone --depth=1 https://github.com/cctv18/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common
-          git clone --depth=1 https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus_ace5 common
+          git clone --depth=1 https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common
           git clone https://github.com/Carl1984/oppo_oplus_realme_sm8650.git
           cp ./oppo_oplus_realme_sm8650/patches/* ./common/
           rm -rf ./common/drivers/soc/oplus/*
