--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -72,9 +72,13 @@ jobs:
           # git clone --depth=1 https://github.com/cctv18/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common
           git clone --depth=1 https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common
           git clone https://github.com/Carl1984/oppo_oplus_realme_sm8650.git
-          cp ./oppo_oplus_realme_sm8650/patches/* ./common/
+          cp ./oppo_oplus_realme_sm8650/patches/001-lz4.patch ./common/
+          cp ./oppo_oplus_realme_sm8650/patches/002-zstd.patch ./common/
+          
           rm -rf ./common/drivers/soc/oplus/*
           cp -r ./oppo_oplus_realme_sm8650/Vendor/* ./common/drivers/soc/oplus/
+          rm -rf ./common/kernel/locking/locking_main.h
+          cp ./oppo_oplus_realme_sm8650/patches/locking_main.h ./common/kernel/locking/
           echo "正在去除 ABI 保护 & 去除 dirty 后缀..."
           rm common/android/abi_gki_protected_exports_* || true
           for f in common/scripts/setlocalversion; do
