--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -37,6 +37,28 @@ on:
         required: false
         type: string
         default: ''
+      basebranch:
+        required: true
+        type: choice
+        options:
+          - sm8650_v_15.0.0_oneplus12
+          - sm8650_v_15.0.0_oneplus_ace5
+          - sm8650_v_15.0.0_ace_3_pro
+      KPM:
+        type: boolean
+        description: "是否启用KPM？"
+        required: true
+        default: true
+      ksu_type:
+        description: '要用的ksu'
+        required: true
+        type: choice
+        options:
+          - ksun
+          - mksu
+          - SukiUltra
+
+        
 
 jobs:
   build:
@@ -55,6 +77,15 @@ jobs:
           remove-haskell: 'true'
           remove-codeql: 'true'
 
+      - name: Show selected inputs debug
+        run: |
+          echo "Selected lz4k_enable: ${{ github.event.inputs.lz4k_enable }}"
+          echo "Selected scx_enable: ${{ github.event.inputs.scx_enable }}"
+          echo "Selected kernel_suffix: ${{ github.event.inputs.kernel_suffix }}"
+          echo "Selected basebranch: ${{ github.event.inputs.basebranch }}"
+          echo "Selected KPM: ${{ github.event.inputs.KPM }}"
+          echo "Selected ksu_type: ${{ github.event.inputs.ksu_type }}"
+
       - name: 安装配置环境依赖
         run: |
           sudo apt-mark hold firefox
@@ -69,8 +100,8 @@ jobs:
         run: |
           rm -rf kernel_workspace && mkdir kernel_workspace && cd kernel_workspace
           echo "正在克隆源码仓库..."
-          # git clone --depth=1 https://github.com/cctv18/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common
-          git clone --depth=1 https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus_ace5 common
+          # git clone --depth=1 https://github.com/cctv18/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common          
+          git clone --depth=1 "https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/${{ github.event.inputs.basebranch }}" common
           git clone https://github.com/Carl1984/oppo_oplus_realme_sm8650.git
           cp ./oppo_oplus_realme_sm8650/patches/001-lz4.patch ./common/
           cp ./oppo_oplus_realme_sm8650/patches/002-zstd.patch ./common/
@@ -92,12 +123,10 @@ jobs:
           done
 
       - name: 添加 SukiSU-Ultra
+        if: ${{github.event.inputs.ksu_type == 'SukiUltra'}}
         id: ksu_version
         run: |
           cd kernel_workspace
-          #if [[ "${{ env.KERNELSU_VARIANT }}" == "SukiSU-Ultra" ]]; then
-          #  echo "BRANCH='-s susfs-dev'" >> $GITHUB_ENV
-          #fi
           curl -LSs "https://raw.githubusercontent.com/ShirkNeko/SukiSU-Ultra/refs/heads/main/kernel/setup.sh" | bash -s susfs-dev
           cd ./KernelSU
           KSU_VERSION=$(expr $(/usr/bin/git rev-list --count main) "+" 10606)
@@ -107,32 +136,59 @@ jobs:
           sed -i "s/DKSU_VERSION=12800/DKSU_VERSION=$KSU_VERSION/" kernel/Makefile
 
       - name: 应用 SUSFS 修补程序 SukiSU-Ultra
+        if: ${{github.event.inputs.ksu_type == 'SukiUltra'}}
         run: |
           cd kernel_workspace
           git clone https://github.com/ShirkNeko/susfs4ksu.git -b gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}
           git clone https://github.com/ShirkNeko/SukiSU_patch.git
-          # git clone https://github.com/Carl1984/oppo_oplus_realme_sm8650.git
           cp ./susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch ./common/
           cp ./susfs4ksu/kernel_patches/fs/* ./common/fs/
           cp ./susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
           cp ./SukiSU_patch/hooks/new_hooks.patch ./common/
-          # cp ./oppo_oplus_realme_sm8650/patches/* ./common/
           cd ./common
           patch -p1 < 50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch || true
           patch -p1 < new_hooks.patch
 
       - name: 应用 Hide Stuff 修补程序
+        if: ${{github.event.inputs.ksu_type == 'SukiUltra'}}
         run: |
           cd kernel_workspace/common
           cp ../SukiSU_patch/69_hide_stuff.patch ./
           patch -p1 < 69_hide_stuff.patch
+
+      - name: Set up KernelSU Next
+        if: ${{github.event.inputs.ksu_type == 'ksun'}}
+        run: |
+          cd kernel_workspace
+          # curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next
+          curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next-susfs
+          cd ./KernelSU-Next
+          # KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
+          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10198)
+          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
+          sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
+
+      - name: 应用 SUSFS 修补程序 ksun
+        if: ${{github.event.inputs.ksu_type == 'ksun'}}
+        run: |
+          cd kernel_workspace
+          git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}
+          cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU-Next/
+          cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch ./common/
+          cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
+          cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
           
-      # - name: 同步lz4patch
-      #   uses: actions/checkout@v4
-      #   with:
-      #     path: 'kernel_workspace'          # 本地存放路径
-      #     sparse-checkout: 'patches'  # 只检出特定目录
-      #     sparse-checkout-cone-mode: true
+          # Apply patches
+          cd ./KernelSU-Next
+          cp ../oppo_oplus_realme_sm8650/patches/0001-kernel-patch-susfs-v1.5.7-to-KernelSU-Next-v1.0.7.patc ./
+          patch -p1 --forward --fuzz=3 < 0001-kernel-patch-susfs-v1.5.7-to-KernelSU-Next-v1.0.7.patch || true
+          cd ../common
+          patch -p1 < 50_add_susfs_in_gki-${{ env.ANDROID_VERSION }}-${{ env.KERNEL_VERSION }}.patch || true
+          # Replace next_hooks.patch with syscall_hooks.patch
+          cp ../kernel_patches/next/syscall_hooks.patch ./
+          patch -p1 -F 3 < syscall_hooks.patch
+          cp ../kernel_patches/69_hide_stuff.patch ./
+          patch -p1 -F 3 < 69_hide_stuff.patch
           
       - name: 应用 lz4 patch  
         run: |
@@ -155,9 +211,15 @@ jobs:
         run: |
           cd kernel_workspace
           echo "CONFIG_KSU=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_KPM=y" >> ./common/arch/arm64/configs/gki_defconfig
+          if [[ "${{ github.event.inputs.ksu_type }}" == "SukiUltra" ]]; then
+            echo "CONFIG_KPM=y" >> ./common/arch/arm64/configs/gki_defconfig
+            echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
+          fi
+          if [[ "${{ github.event.inputs.ksu_type }}" == "ksun" ]]; then
+            echo "CONFIG_KSU_WITH_KPROBES=n" >> ./common/arch/arm64/configs/gki_defconfig
+            echo "CONFIG_KSU_KPROBES_HOOK=n" >> ./common/arch/arm64/configs/gki_defconfig
+          fi
           echo "CONFIG_KSU_SUSFS_SUS_SU=n" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_KSU_MANUAL_HOOK=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_SUS_PATH=y" >> ./common/arch/arm64/configs/gki_defconfig
@@ -216,14 +278,15 @@ jobs:
           make -j$(nproc --all) LLVM=-20 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnuabeihf- CC=clang LD=ld.lld HOSTCC=clang HOSTLD=ld.lld O=out KCFLAGS+=-Wno-error gki_defconfig all
           echo "内核编译完成！"
          
-      - name: 应用patch_linux并修补内核
+      - name: 应用KPMpatch_linux并修补内核
+        if: ${{github.event.inputs.ksu_type == 'SukiUltra' && github.event.inputs.KPM == 'true' }}
         run: |
           cd kernel_workspace/common/out/arch/arm64/boot
           curl -LO https://github.com/ShirkNeko/SukiSU_KernelPatch_patch/releases/download/0.11-beta/patch_linux
           chmod +x patch_linux
           ./patch_linux
           rm -f Image
-          mv oImage Image
+          mv oImage Image     
           
       - name: 克隆 AnyKernel3 并打包
         run: |
