--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -168,8 +168,8 @@ jobs:
         if: ${{github.event.inputs.ksu_type == 'ksun'}}
         run: |
           cd kernel_workspace
-          # curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next
-          curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next-susfs
+          curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next
+          # curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next-susfs
           cd ./KernelSU-Next
           # KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
           KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10198)
