--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -108,28 +108,38 @@ jobs:
 
       - name: 初始化源码仓库
         run: |
-          rm -rf kernel_workspace && mkdir kernel_workspace && cd kernel_workspace
-          echo "正在克隆源码仓库..."
-          # git clone --depth=1 https://github.com/cctv18/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common         
+          # ===== 初始化仓库 =====
+          echo ">>> 初始化仓库..."
+          rm -rf kernel_workspace
+          mkdir kernel_workspace
+          cd kernel_workspace
+          git clone --depth 1 https://github.com/OnePlusOSS/android_kernel_modules_and_devicetree_oneplus_sm8650/ -b oneplus/"${{ github.event.inputs.basebranch }}"  vendor
+          mv vendor/* ..
+          git clone --depth=1 https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/"${{ github.event.inputs.basebranch }}" common
+          echo ">>> 初始化仓库完成"
           
-          if [[ "${{ github.event.inputs.basebranch }}" == "realme_GT5pro-AndroidV-common-source" ]]; then
-            git clone --depth=1 https://github.com/realme-kernel-opensource/realme_GT5pro-AndroidV-common-source.git common
-          else
-            git clone --depth=1 https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/"${{ github.event.inputs.basebranch }}" common
-          fi  
+          # rm -rf kernel_workspace && mkdir kernel_workspace && cd kernel_workspace
+          # echo "正在克隆源码仓库..."
+          # # git clone --depth=1 https://github.com/cctv18/android_kernel_common_oneplus_sm8650 -b oneplus/sm8650_v_15.0.0_oneplus12 common         
           
-          git clone https://github.com/Carl1984/oppo_oplus_realme_sm8650.git
-          cp ./oppo_oplus_realme_sm8650/patches/001-lz4.patch ./common/
-          cp ./oppo_oplus_realme_sm8650/patches/002-zstd.patch ./common/
+          # if [[ "${{ github.event.inputs.basebranch }}" == "realme_GT5pro-AndroidV-common-source" ]]; then
+          #   git clone --depth=1 https://github.com/realme-kernel-opensource/realme_GT5pro-AndroidV-common-source.git common
+          # else
+          #   git clone --depth=1 https://github.com/OnePlusOSS/android_kernel_common_oneplus_sm8650 -b oneplus/"${{ github.event.inputs.basebranch }}" common
+          # fi  
           
-          rm -rf ./common/drivers/soc/oplus/*
-          cp -r ./oppo_oplus_realme_sm8650/Vendor/* ./common/drivers/soc/oplus/
-          rm -rf ./common/kernel/locking/locking_main.h
-          cp ./oppo_oplus_realme_sm8650/patches/locking_main.h ./common/kernel/locking/
-          rm -rf ./common/kernel/locking/oplus_locking.c
-          cp ./oppo_oplus_realme_sm8650/patches/oplus_locking.c ./common/kernel/locking/
-          rm -rf ./common/kernel/locking/sa_common_struct.h
-          cp ./oppo_oplus_realme_sm8650/patches/sa_common_struct.h ./common/kernel/locking/
+          # git clone https://github.com/Carl1984/oppo_oplus_realme_sm8650.git
+          # cp ./oppo_oplus_realme_sm8650/patches/001-lz4.patch ./common/
+          # cp ./oppo_oplus_realme_sm8650/patches/002-zstd.patch ./common/
+          
+          # rm -rf ./common/drivers/soc/oplus/*
+          # cp -r ./oppo_oplus_realme_sm8650/Vendor/* ./common/drivers/soc/oplus/
+          # rm -rf ./common/kernel/locking/locking_main.h
+          # cp ./oppo_oplus_realme_sm8650/patches/locking_main.h ./common/kernel/locking/
+          # rm -rf ./common/kernel/locking/oplus_locking.c
+          # cp ./oppo_oplus_realme_sm8650/patches/oplus_locking.c ./common/kernel/locking/
+          # rm -rf ./common/kernel/locking/sa_common_struct.h
+          # cp ./oppo_oplus_realme_sm8650/patches/sa_common_struct.h ./common/kernel/locking/
           
           echo "正在去除 ABI 保护 & 去除 dirty 后缀..."
           rm common/android/abi_gki_protected_exports_* || true
