--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -6,7 +6,8 @@ env:
   FEIL: 'oppo+oplus+realme'
   ANDROID_VERSION: 'android14'
   KERNEL_VERSION: '6.1'
-  KERNEL_NAME: 'android14-11-o-g4c9c8979e2a7'
+  # KERNEL_NAME: 'android14-11-o-g4c9c8979e2a7'
+  KERNEL_NAME: 'android14-11-o-g239209decfd3'
   KERNELSU_VARIANT: 'SukiSU-Ultra'
   KERNELSU_BRANCH: 'susfs-dev'
 
