更新 build_A15-Carl.yml

--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -232,7 +232,8 @@ jobs:
       - name: 应用 lz4 patch  
         run: |
           cd kernel_workspace/common
-          patch -p1 < 001-lz4.patch
+          #patch -p1 < 001-lz4.patch
+          git apply -p1 < 001-lz4.patch
           patch -p1 < 002-zstd.patch
 
           
