--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -157,7 +157,7 @@ jobs:
           git clone --depth 1 https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r547379.git
           cd android_prebuilts_clang_host_linux-x86_clang-r547379
           echo $PATH
-          export PATH="$PWD/clang/bin:$PATH"
+          export PATH="$PWD/bin:$PATH"
           echo $PATH
 
           
