--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -103,10 +103,10 @@ jobs:
           sudo apt update && sudo apt upgrade -y
           # sudo apt-get install curl bison flex make binutils dwarves git lld pahole zip perl make gcc python3 python-is-python3 bc libssl-dev libelf-dev -y
           sudo apt-get install curl bison flex make binutils dwarves git lld pahole zip perl make gcc python3 python-is-python3 bc libssl-dev libelf-dev ccache -y
-          # sudo rm -rf ./llvm.sh
-          # sudo wget https://apt.llvm.org/llvm.sh
-          # sudo chmod +x llvm.sh
-          # sudo sudo ./llvm.sh 20 all
+          sudo rm -rf ./llvm.sh
+          sudo wget https://apt.llvm.org/llvm.sh
+          sudo chmod +x llvm.sh
+          sudo sudo ./llvm.sh 20 all
 
       - name: 初始化源码仓库
         run: |
