--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -103,10 +103,10 @@ jobs:
           sudo apt update && sudo apt upgrade -y
           # sudo apt-get install curl bison flex make binutils dwarves git lld pahole zip perl make gcc python3 python-is-python3 bc libssl-dev libelf-dev -y
           sudo apt-get install curl bison flex make binutils dwarves git lld pahole zip perl make gcc python3 python-is-python3 bc libssl-dev libelf-dev ccache -y
-          sudo rm -rf ./llvm.sh
-          sudo wget https://apt.llvm.org/llvm.sh
-          sudo chmod +x llvm.sh
-          sudo sudo ./llvm.sh 20 all
+          # sudo rm -rf ./llvm.sh
+          # sudo wget https://apt.llvm.org/llvm.sh
+          # sudo chmod +x llvm.sh
+          # sudo sudo ./llvm.sh 20 all
 
       - name: 初始化源码仓库
         run: |
@@ -156,11 +156,11 @@ jobs:
           cd toolchains
           git clone --depth 1 https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r547379.git
           cd android_prebuilts_clang_host_linux-x86_clang-r547379
-          echo $PATH
-          export PATH="$PWD/bin:$PATH"
-          echo $PATH
-          export CLANG_TRIPLE="aarch64-linux-gnu-"
-          export CROSS_COMPILE="${CLANG_TRIPLE}"
+          # echo $PATH
+          # export PATH="$PWD/bin:$PATH"
+          # echo $PATH
+          # export CLANG_TRIPLE="aarch64-linux-gnu-"
+          # export CROSS_COMPILE="${CLANG_TRIPLE}"
           
       - name: 添加 SukiSU-Ultra
         if: ${{github.event.inputs.ksu_type == 'SukiUltra'}}
@@ -331,6 +331,11 @@ jobs:
            
       - name: 构建内核
         run: |
+          export PATH="$GITHUB_WORKSPACE/toolchains/android_prebuilts_clang_host_linux-x86_clang-r547379/bin:$PATH"
+          export PATH="/usr/lib/ccache:$PATH"
+          echo $PATH
+          export CLANG_TRIPLE="aarch64-linux-gnu-"
+          export CROSS_COMPILE="${CLANG_TRIPLE}"
           cd kernel_workspace
           if [[ ${{ github.event.inputs.scx_enable }} == "true" ]]; then
             git clone https://github.com/cctv18/sched_ext.git
