--- a/.github/workflows/build_A15-Carl.yml
+++ b/.github/workflows/build_A15-Carl.yml
@@ -154,13 +154,13 @@ jobs:
           cd ..
           mkdir toolchains
           cd toolchains
-          # git clone --depth 1 https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r547379.git
-          # cd android_prebuilts_clang_host_linux-x86_clang-r547379
-          mkdir neutron-clang
-          cd neutron-clang
-          curl -LO "https://raw.githubusercontent.com/Neutron-Toolchains/antman/main/antman"
-          chmod +x antman
-          ./antman -S
+          git clone --depth 1 https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r547379.git
+          cd android_prebuilts_clang_host_linux-x86_clang-r547379
+          # mkdir neutron-clang
+          # cd neutron-clang
+          # curl -LO "https://raw.githubusercontent.com/Neutron-Toolchains/antman/main/antman"
+          # chmod +x antman
+          # ./antman -S
 
           
           
@@ -342,8 +342,8 @@ jobs:
            
       - name: 构建内核
         run: |
-          # export PATH="$GITHUB_WORKSPACE/toolchains/android_prebuilts_clang_host_linux-x86_clang-r547379/bin:$PATH"
-          export PATH="$GITHUB_WORKSPACE/toolchains/neutron-clang/bin:$PATH"
+          export PATH="$GITHUB_WORKSPACE/toolchains/android_prebuilts_clang_host_linux-x86_clang-r547379/bin:$PATH"
+          # export PATH="$GITHUB_WORKSPACE/toolchains/neutron-clang/bin:$PATH"
           export PATH="/usr/lib/ccache:$PATH"
           echo $PATH
           export CLANG_TRIPLE="aarch64-linux-gnu-"
